apps/measurement/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: measurement
  name: measurement
